[package]
name = "tracelloc"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya.git", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya.git", branch = "main" }
tracelloc-ebpf-common.path = "../ebpf-common"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
